# SPPReflection

./: CMakeLists.txt  LICENSE  README.md  SPPReflection.cpp  testGame.cpp
inc/: SPPCore.h  SPPGUID.h  SPPLogging.h  SPPRDataManipulators.h  SPPRTypeTraits.h  SPPReflection.h  SPPStrumber.h
src/: SPPReflection.cpp
